--- a/misas-thai-street-cuisine-2.0/Components/CartMenuItem.razor
+++ b/misas-thai-street-cuisine-2.0/Components/CartMenuItem.razor
@@ -46,21 +46,19 @@
                             @if (serve == 2)
                             {
                                 <div class="cart-upgrade-row">
-                                    <span class="cart-upgrade-label"><b>Upgrade:</b> 24 oz Phad Thai</span>
-                                    <button class="cart-btn" @onclick="() => ChangeUpgradeQty(match, 2, -1)">−</button>
+                                    <span class="cart-upgrade-label"><b>Upgrade:</b> 24 oz Phad Thai - <b>add $9</b></span>
+                                    <button class="cart-upgrade-btn" @onclick="() => ChangeUpgradeQty(match, 2, -1)">−</button>
                                     <span class="cart-qty">@match.UpgradePhadThai24Qty</span>
-                                    <button class="cart-btn" @onclick="() => ChangeUpgradeQty(match, 2, 1)">+</button>
-                                    <span class="cart-upgrade-label">($9 each)</span>
+                                    <button class="cart-upgrade-btn" @onclick="() => ChangeUpgradeQty(match, 2, 1)">+</button>
                                 </div>
                             }
                             @if (serve == 4)
                             {
                                 <div class="cart-upgrade-row">
-                                    <span class="cart-upgrade-label"><b>Upgrade:</b> 48 oz Phad Thai</span>
-                                    <button class="cart-btn" @onclick="() => ChangeUpgradeQty(match, 4, -1)">−</button>
+                                    <span class="cart-upgrade-label"><b>Upgrade:</b> 48 oz Phad Thai - <b>add $18</b></span>
+                                    <button class="cart-upgrade-btn" @onclick="() => ChangeUpgradeQty(match, 4, -1)">−</button>
                                     <span class="cart-qty">@match.UpgradePhadThai48Qty</span>
-                                    <button class="cart-btn" @onclick="() => ChangeUpgradeQty(match, 4, 1)">+</button>
-                                    <span class="cart-upgrade-label">($18 each)</span>
+                                    <button class="cart-upgrade-btn" @onclick="() => ChangeUpgradeQty(match, 4, 1)">+</button>
                                 </div>
                             }
                         }
