--- a/misas-thai-street-cuisine-2.0/Layout/MainLayout.razor.css
+++ b/misas-thai-street-cuisine-2.0/Layout/MainLayout.razor.css
@@ -101,21 +101,22 @@
 }
 
 .countdown-label-text {
-    font-size: 0.6em;
+    font-size: 0.5em;
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     color: #ee6900;
     text-transform: uppercase;
     letter-spacing: 0.5px;
+    transition: font-size 0.01s, padding 0.01s;
 }
 
 .countdown-info-icon {
-    font-size: 0.7em;
+    font-size: 0.75em;
     color: #ee6900;
     cursor: pointer;
     transition: color 0.2s ease;
-    align-self: flex-start;
-    margin-top: 0.1rem;
+    align-self: center;
+    margin-top: 0.25rem;
 }
 
 .countdown-info-icon:hover {
@@ -164,7 +165,6 @@
 }
 .main-content {
     flex: 1; 
-
     height: auto;
 }
 .footer{
@@ -242,7 +242,7 @@
 }
 
 .navbar-shrunk .countdown {
-    font-size: 1.25rem;
+    font-size: 1.1rem;
     padding: 2px;
     display: flex;
     align-items: flex-end;
@@ -261,12 +261,8 @@
 .navbar-shrunk .countdown-label-text {
     font-size: 0.5em;
 }
-
-.navbar-shrunk .countdown-info-icon {
-    font-size: 0.5em;
-}
 .navbar-shrunk .cart-icon-link {
-    font-size: 1.1rem;
+    font-size: 1rem;
     gap: 0.2rem;
 }
 
@@ -353,10 +349,6 @@
     
     .countdown-label-text {
         font-size: 0.5em;
-    }
-    
-    .countdown-info-icon {
-        font-size: 0.6em;
     }
 }
 
