--- a/misas-thai-street-cuisine-2.0/Pages/ShoppingCart.razor
+++ b/misas-thai-street-cuisine-2.0/Pages/ShoppingCart.razor
@@ -60,7 +60,7 @@
 
     private void OnFinishUpClicked()
     {
-        JS.InvokeVoidAsync("alert", "Not currently accepting orders");
-        @* NavigationManager.NavigateTo("/FinalizeOrder"); *@
+        @* JS.InvokeVoidAsync("alert", "Not currently accepting orders"); *@
+        NavigationManager.NavigateTo("/FinalizeOrder");
     }
 }
